Use Hamcrest matchers instead of JUnit5 assertion methods.