@@ -23,11 +23,12 @@ import org.junit.jupiter.api.Test;
 import uk.badamson.dbc.assertions.ObjectVerifier;
 
 import java.time.Duration;
-import java.util.Collections;
 import java.util.Map;
 import java.util.Set;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.*;
+import static org.junit.jupiter.api.Assertions.assertAll;
 
 /**
  * <p>
@@ -62,9 +63,9 @@ public class ModifiableSetHistoryTest {
         assertInvariants(history, value);
         final var contains = history.contains(value);
         assertAll("This history does not contain the given value at any points in time.",
-                () -> assertSame(Boolean.FALSE, contains.getFirstValue(), "[start of time]."),
-                () -> assertTrue(contains.isEmpty(), "[no transitions]."));
-        assertFalse(history.getUniverse().contains(value), "The universe of this time varying set does not contain the given value.");
+                () -> assertThat("[start of time]", contains.getFirstValue(), is(Boolean.FALSE)),
+                () -> assertThat("[no transitions].", contains.isEmpty(), is(true)));
+        assertThat(history.getUniverse().contains(value), is(false));
     }
 
     @Test
@@ -75,8 +76,8 @@ public class ModifiableSetHistoryTest {
         assertInvariants(history1);
         assertInvariants(history1, history2);
 
-        assertEquals(Collections.EMPTY_SET, history1.getTransitionTimes(), "This has no transition times.");
-        assertEquals(history1, history2, "Value semantics");
+        assertThat(history1.getTransitionTimes(), empty());
+        assertThat(history1, is(history2));
 
         ValueHistoryTest.assertInvariants(history1, WHEN_1);
         ValueHistoryTest.assertInvariants(history1, WHEN_2);
@@ -94,13 +95,10 @@ public class ModifiableSetHistoryTest {
             assertInvariants(history);
             assertInvariants(history, value);
             final ValueHistory<Boolean> contains = history.contains(value);
-            assertSame(Boolean.TRUE, contains.getLastValue(),
-                    "The last value of the contains history for the given value is TRUE.");
-            assertSame(Boolean.TRUE, contains.get(when),
-                    "The value at the given time of the contains history for the given value is TRUE.");
+            assertThat(contains.getLastValue(), sameInstance(Boolean.TRUE));
+            assertThat(contains.get(when), sameInstance(Boolean.TRUE));
             final var lastTransitionTime = contains.getLastTransitionTime();
-            assertTrue(lastTransitionTime == null || lastTransitionTime.compareTo(when) <= 0,
-                    "The contains history for the given value has its last transition time is at or before the given time.");
+            assertThat(lastTransitionTime == null || lastTransitionTime.compareTo(when) <= 0, is(true));
         }
 
         @Nested
@@ -112,9 +110,6 @@ public class ModifiableSetHistoryTest {
             }
 
             private <VALUE> void addFrom_1(final Duration when, final VALUE value) {
-                final Map<Duration, Set<VALUE>> expectedTransitions = Collections.singletonMap(when,
-                        Collections.singleton(value));
-                final Map<Duration, Boolean> expectedContainsTransitions = Collections.singletonMap(when, Boolean.TRUE);
                 final ModifiableSetHistory<VALUE> history0 = new ModifiableSetHistory<>();
                 final ModifiableSetHistory<VALUE> history1 = new ModifiableSetHistory<>();
                 final ModifiableSetHistory<VALUE> history2 = new ModifiableSetHistory<>();
@@ -125,13 +120,12 @@ public class ModifiableSetHistoryTest {
                 assertAll("Invariants", () -> assertInvariants(history0, history1),
                         () -> assertInvariants(history1, history2));
 
-                assertEquals(Collections.EMPTY_SET, history1.getFirstValue(), "Set at start of time");
-                assertEquals(expectedTransitions, ValueHistoryTest.getTransitionValues(history1), "Transitions");
-                assertEquals(expectedContainsTransitions,
-                        ValueHistoryTest.getTransitionValues(history1.contains(value)), "contains transitions");
+                assertThat(history1.getFirstValue(), empty());
+                assertThat(ValueHistoryTest.getTransitionValues(history1), allOf(aMapWithSize(1), hasEntry(when, Set.of(value))));
+                assertThat(ValueHistoryTest.getTransitionValues(history1.contains(value)), allOf(aMapWithSize(1), hasEntry(when, Boolean.TRUE)));
 
-                assertAll("Value semantics", () -> assertNotEquals(history0, history1),
-                        () -> assertEquals(history1, history2));
+                assertAll(() -> assertThat(history0, not(is(history1))),
+                        () -> assertThat(history1, is(history2)));
             }
 
             @Test
@@ -147,46 +141,34 @@ public class ModifiableSetHistoryTest {
             private <VALUE> void addFrom_2_differentValues(final Duration when1, final VALUE value1,
                                                            final Duration when2, final VALUE value2) {
                 assert when1.compareTo(when2) < 0;
-                final Set<Duration> expectedTransitionTimes = Set.of(when1, when2);
-                final Map<Duration, Set<VALUE>> expectedTransitions = Map.of(when1, Collections.singleton(value1),
-                        when2, Set.of(value1, value2));
-                final Map<Duration, Boolean> expectedContainsTransitions1 = Collections.singletonMap(when1,
-                        Boolean.TRUE);
-                final Map<Duration, Boolean> expectedContainsTransitions2 = Collections.singletonMap(when2,
-                        Boolean.TRUE);
 
                 final ModifiableSetHistory<VALUE> history = new ModifiableSetHistory<>();
                 history.addFrom(when1, value1);
 
                 addFrom(history, when2, value2);
 
-                assertEquals(Collections.EMPTY_SET, history.getFirstValue(), "Set at start of time");
-                assertEquals(expectedTransitionTimes, history.getTransitionTimes(), "transitionTimes");
-                assertEquals(expectedTransitions, ValueHistoryTest.getTransitionValues(history), "Transitions");
+                assertThat(history.getFirstValue(), empty());
+                assertThat(history.getTransitionTimes(), containsInAnyOrder(when1, when2));
+                assertThat(ValueHistoryTest.getTransitionValues(history), allOf(aMapWithSize(2), hasEntry(when1, Set.of(value1)), hasEntry(when2, Set.of(value1, value2))));
 
                 assertAll("contains transitions",
-                        () -> assertEquals(expectedContainsTransitions1,
-                                ValueHistoryTest.getTransitionValues(history.contains(value1)), "[1]"),
-                        () -> assertEquals(expectedContainsTransitions2,
-                                ValueHistoryTest.getTransitionValues(history.contains(value2)), "[2]"));
+                        () -> assertThat("[1]",
+                                ValueHistoryTest.getTransitionValues(history.contains(value1)), allOf(aMapWithSize(1), hasEntry(when1, Boolean.TRUE))),
+                        () -> assertThat("[2]",
+                                ValueHistoryTest.getTransitionValues(history.contains(value2)), allOf(aMapWithSize(1), hasEntry(when2, Boolean.TRUE))));
             }
 
             private <VALUE> void addFrom_2_sameValue(final Duration when1, final Duration when2, final VALUE value) {
                 final Duration whenEarliest = when1.compareTo(when2) <= 0 ? when1 : when2;
-                final Map<Duration, Set<VALUE>> expectedTransitions = Collections.singletonMap(whenEarliest,
-                        Collections.singleton(value));
-                final Map<Duration, Boolean> expectedContainsTransitions = Collections.singletonMap(whenEarliest,
-                        Boolean.TRUE);
 
                 final ModifiableSetHistory<VALUE> history = new ModifiableSetHistory<>();
                 history.addFrom(when1, value);
 
                 addFrom(history, when2, value);
 
-                assertEquals(Collections.EMPTY_SET, history.getFirstValue(), "Set at start of time");
-                assertEquals(expectedTransitions, ValueHistoryTest.getTransitionValues(history), "Transitions");
-                assertEquals(expectedContainsTransitions, ValueHistoryTest.getTransitionValues(history.contains(value)),
-                        "contains transitions");
+                assertThat(history.getFirstValue(), empty());
+                assertThat(ValueHistoryTest.getTransitionValues(history), allOf(aMapWithSize(1), hasEntry(whenEarliest, Set.of(value))));
+                assertThat(ValueHistoryTest.getTransitionValues(history.contains(value)), allOf(aMapWithSize(1), hasEntry(whenEarliest, Boolean.TRUE)));
             }
 
             @Test
@@ -238,13 +220,10 @@ public class ModifiableSetHistoryTest {
             assertInvariants(history);
             assertInvariants(history, value);
             final ValueHistory<Boolean> contains = history.contains(value);
-            assertSame(Boolean.TRUE, contains.getFirstValue(),
-                    "The first value of the contains history for the given value is TRUE.");
-            assertSame(Boolean.TRUE, contains.get(when),
-                    "The value at the given time of the contains history for the given value is TRUE.");
+            assertThat(contains.getFirstValue(), sameInstance(Boolean.TRUE));
+            assertThat(contains.get(when), sameInstance(Boolean.TRUE));
             final var firstTransitionTime = contains.getFirstTransitionTime();
-            assertTrue(firstTransitionTime == null || when.compareTo(firstTransitionTime) < 0,
-                    "The contains history for the given value has its first transition time after the given time.");
+            assertThat(firstTransitionTime == null || when.compareTo(firstTransitionTime) < 0, is(true));
         }
 
         @Nested
@@ -252,10 +231,6 @@ public class ModifiableSetHistoryTest {
 
             private <VALUE> void addUntil_1(final Duration when, final VALUE value) {
                 final Duration justAfter = when.plusNanos(1L);
-                final Map<Duration, Set<VALUE>> expectedTransitions = Collections.singletonMap(justAfter,
-                        Collections.emptySet());
-                final Map<Duration, Boolean> expectedContainsTransitions = Collections.singletonMap(justAfter,
-                        Boolean.FALSE);
                 final ModifiableSetHistory<VALUE> history0 = new ModifiableSetHistory<>();
                 final ModifiableSetHistory<VALUE> history1 = new ModifiableSetHistory<>();
                 final ModifiableSetHistory<VALUE> history2 = new ModifiableSetHistory<>();
@@ -266,13 +241,12 @@ public class ModifiableSetHistoryTest {
                 assertInvariants(history0, history1);
                 assertInvariants(history1, history2);
 
-                assertEquals(Collections.EMPTY_SET, history1.getLastValue(), "Set at end of time");
-                assertEquals(expectedTransitions, ValueHistoryTest.getTransitionValues(history1), "Transitions");
-                assertEquals(expectedContainsTransitions,
-                        ValueHistoryTest.getTransitionValues(history1.contains(value)), "contains transitions");
+                assertThat(history1.getLastValue(), empty());
+                assertThat(ValueHistoryTest.getTransitionValues(history1), is(Map.of(justAfter, Set.of())));
+                assertThat(ValueHistoryTest.getTransitionValues(history1.contains(value)), is(Map.of(justAfter, Boolean.FALSE)));
 
-                assertAll("Value semantics", () -> assertNotEquals(history0, history1),
-                        () -> assertEquals(history1, history2));
+                assertAll("Value semantics", () -> assertThat(history0, not(history1)),
+                        () -> assertThat(history1, is(history2)));
             }
 
             @Test
@@ -295,47 +269,35 @@ public class ModifiableSetHistoryTest {
                 assert when1.compareTo(when2) < 0;
                 final Duration justAfter1 = when1.plusNanos(1L);
                 final Duration justAfter2 = when2.plusNanos(1L);
-                final Set<Duration> expectedTransitionTimes = Set.of(justAfter1, justAfter2);
-                final Map<Duration, Set<VALUE>> expectedTransitions = Map.of(justAfter1, Collections.singleton(value2),
-                        justAfter2, Collections.emptySet());
-                final Map<Duration, Boolean> expectedContainsTransitions1 = Collections.singletonMap(justAfter1,
-                        Boolean.FALSE);
-                final Map<Duration, Boolean> expectedContainsTransitions2 = Collections.singletonMap(justAfter2,
-                        Boolean.FALSE);
 
                 final ModifiableSetHistory<VALUE> history = new ModifiableSetHistory<>();
                 history.addUntil(when1, value1);
 
                 addUntil(history, when2, value2);
 
-                assertEquals(Set.of(value1, value2), history.getFirstValue(), "Set at start of time");
-                assertEquals(expectedTransitionTimes, history.getTransitionTimes(), "transitionTimes");
-                assertEquals(expectedTransitions, ValueHistoryTest.getTransitionValues(history), "Transitions");
+                assertThat(history.getFirstValue(), is(Set.of(value1, value2)));
+                assertThat(history.getTransitionTimes(), is(Set.of(justAfter1, justAfter2)));
+                assertThat(ValueHistoryTest.getTransitionValues(history), allOf(aMapWithSize(2), hasEntry(justAfter1, Set.of(value2)), hasEntry(justAfter2, Set.<VALUE>of())));
 
-                assertAll("contains transitions",
-                        () -> assertEquals(expectedContainsTransitions1,
-                                ValueHistoryTest.getTransitionValues(history.contains(value1)), "[1]"),
-                        () -> assertEquals(expectedContainsTransitions2,
-                                ValueHistoryTest.getTransitionValues(history.contains(value2)), "[2]"));
+                assertAll(
+                        () -> assertThat("[1]",
+                                ValueHistoryTest.getTransitionValues(history.contains(value1)), is(Map.of(justAfter1, Boolean.FALSE))),
+                        () -> assertThat("[2]",
+                                ValueHistoryTest.getTransitionValues(history.contains(value2)), is(Map.of(justAfter2, Boolean.FALSE))));
             }
 
             private <VALUE> void addUntil_2_sameValue(final Duration when1, final Duration when2, final VALUE value) {
                 final Duration whenLatest = when1.compareTo(when2) <= 0 ? when2 : when1;
                 final Duration justAfter = whenLatest.plusNanos(1L);
-                final Map<Duration, Set<VALUE>> expectedTransitions = Collections.singletonMap(justAfter,
-                        Collections.emptySet());
-                final Map<Duration, Boolean> expectedContainsTransitions = Collections.singletonMap(justAfter,
-                        Boolean.FALSE);
 
                 final ModifiableSetHistory<VALUE> history = new ModifiableSetHistory<>();
                 history.addUntil(when1, value);
 
                 addUntil(history, when2, value);
 
-                assertEquals(Collections.singleton(value), history.getFirstValue(), "Set at start of time");
-                assertEquals(expectedTransitions, ValueHistoryTest.getTransitionValues(history), "Transitions");
-                assertEquals(expectedContainsTransitions, ValueHistoryTest.getTransitionValues(history.contains(value)),
-                        "contains transitions");
+                assertThat(history.getFirstValue(), is(Set.of(value)));
+                assertThat(ValueHistoryTest.getTransitionValues(history), is(Map.of(justAfter, Set.of())));
+                assertThat(ValueHistoryTest.getTransitionValues(history.contains(value)), is(Map.of(justAfter, Boolean.FALSE)));
             }
 
             @Test
@@ -423,8 +385,7 @@ public class ModifiableSetHistoryTest {
 
             remove(history, value2);
 
-            assertEquals(contains10, history.contains(value1),
-                    "Whether this history contains other values is unchanged [1].");
+            assertThat("Whether this history contains other values is unchanged [1].", history.contains(value1), is(contains10));
         }
 
         private void remove_presentFrom(final Duration when, final Integer value) {
